scraper finished, got data from nba website and upserted it into supabase

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=demo
 # Database Connection
-spring.datasource.url=jdbc:postgresql://localhost:5432/fantasy_basketball
-spring.datasource.username=postgres
-spring.datasource.password=31
+spring.datasource.url=jdbc:postgresql://aws-1-us-east-1.pooler.supabase.com:5432/postgres?user=postgres.ugmzmnlciowvjvyokcxr&password=Type1nastrongpass31word
+spring.datasource.username=postgres.ugmzmnlciowvjvyokcxr
+spring.datasource.password=3pe1nastrongpass31word
 
 # JPA/Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
